--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebApplication1Context": "Server=(localdb)\\mssqllocaldb;Database=WebApplication1Context-cfa9fd98-e406-404c-b0e0-7b9d3500cb16;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
