MySQL adaptation and first migration

--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebApplication1Context": "Server=(localdb)\\mssqllocaldb;Database=WebApplication1Context-cfa9fd98-e406-404c-b0e0-7b9d3500cb16;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WebApplication1Context": "server=localhost;userid=developer;port=3310;password=1234567;database=WebApplication1mvcappdb"
   }
 }
